--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -81,7 +81,8 @@
                             @player.Name
                             @player.StatusText
                             | Ship Score:  @player.ScoreShip <span style="color:@(player.ScoreShipDiff > 0 ? "#00B300":"red")">(@(player.ScoreShipDiff > 0 ? "+" : "")@player.ScoreShipDiff)</span>
-                            | Ships: @player.ShipNumber 
+                            | Ships: @player.ShipNumber
+                            | Player Style: @player.Style
                             <span class="pull-right">Snapshot time: @(player.SnapshotDiff) | Last update: @(player.LastUpdate)</span>
                         </a>
                     </h4>
