--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -107,19 +107,19 @@
                                 </thead>
                                 <tbody>
                                     @foreach (var planet in player.Planets)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => planet.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => planet.Coord)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => planet.Moon.Name)
-                        </td>
-                    </tr>
-}
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => planet.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => planet.Coord)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => planet.Moon.Name)
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                     </div>
@@ -158,7 +158,7 @@
                     @Html.DisplayNameFor(model => model.Servers[0].LastUpdate)
                 </th>
                 <th>
-                    
+                    Force Update
                 </th>
             </tr>
         </thead>
@@ -188,7 +188,7 @@
                     @Html.DisplayFor(modelItem => item.LastUpdate)
                 </td>
                 <td>
-                    <a href="/StellarView/UpdateScoreBoard/@item.Id">Update Scoreboard</a>
+                    <a href="/StellarView/UpdateUniverse/@item.Id">Universe</a> / <a href="/StellarView/UpdateScoreBoard/@item.Id">Scoreboard</a>
                 </td>
             </tr>
             }
